Fixed typos; Added more functions to repository
